[workspace]
resolver = "2"
members = [
    "openssl",
    "openssl-errors",
    "openssl-macros",
    "openssl-sys",
    "systest",
]

[workspace.dependencies]
aws-lc-fips-sys = { version = "0.13", features = ["ssl", "bindgen"] }
aws-lc-sys = { version = "0.30.0", features = ["ssl"] }
bitflags = "2.2.1"
bssl-sys = { version = "0.1.0" }
cfg-if = "1.0"
foreign-types = "0.3.1"
hex = "0.4"
libc = "0.2"
once_cell = "1.5.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

# Build dependencies
bindgen = { version = "0.69.0", features = ["experimental"] }
cc = "1.0.61"
openssl-src = { version = "300.2.0",  features = ["legacy"] }
pkg-config = "0.3.9"
vcpkg = "0.2.8"
ctest = "0.4.11"

# Workspace dependencies
openssl-macros = { path = "./openssl-macros" }
openssl-sys = { path = "./openssl-sys" }
openssl = { path = "./openssl" }
ffi = { package = "openssl-sys",  path = "./openssl-sys" }
