[package]
name = "openssl-errors"
version = "0.2.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Custom error library support for the openssl crate."
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
categories = ["api-bindings"]

[dependencies]
cfg-if = "1.0"
libc = "0.2"

tongsuo-openssl-sys = { version = "0.9.64", path = "../tongsuo-openssl-sys" }

[dev-dependencies]
tongsuo-openssl = { version = "0.10.19", path = "../tongsuo-openssl" }
