[package]
name = "openssl-errors"
version = "0.2.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Custom error library support for the openssl crate."
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
categories = ["api-bindings"]
rust-version = "1.70.0"

[dependencies]
cfg-if.workspace = true
libc.workspace = true

openssl-sys.workspace = true

[dev-dependencies]
openssl.workspace = true
