[package]
name = "openssl-sys-extras"
version = "0.7.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "Extra FFI bindings to OpenSSL that require a C shim"
repository = "https://github.com/sfackler/rust-openssl"
documentation = "https://sfackler.github.io/rust-openssl/doc/v0.7.1/openssl_sys_extras"

links = "openssl_shim"
build = "build.rs"

[features]
ecdh_auto = []

[dependencies]
libc = "0.2"
openssl-sys = { version = "0.7.1", path = "../openssl-sys" }

[build-dependencies]
gcc = "0.3"
