[package]
name = "openssl-sys"
version = "0.9.109"
authors = [
    "Alex Crichton <alex@alexcrichton.com>",
    "Steven Fackler <sfackler@gmail.com>",
]
license = "MIT"
description = "FFI bindings to OpenSSL"
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
links = "openssl"
build = "build/main.rs"
edition = "2021"
rust-version = "1.70.0"

[features]
vendored = ['openssl-src']
unstable_boringssl = ['bssl-sys']
aws-lc = ['dep:aws-lc-sys']
aws-lc-fips = ['dep:aws-lc-fips-sys']

[dependencies]
libc.workspace = true
bssl-sys = { workspace = true, optional = true}
aws-lc-sys = { workspace = true, optional = true}
aws-lc-fips-sys = { workspace = true, optional = true}

[build-dependencies]
bindgen = { workspace = true, optional = true }
cc.workspace = true
openssl-src = { workspace = true, optional = true }
pkg-config.workspace = true
vcpkg.workspace = true

# We don't actually use metadeps for annoying reasons but this is still here for tooling
[package.metadata.pkg-config]
openssl = "1.0.1"
