[package]
name = "openssl"
version = "0.10.32"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "Apache-2.0"
description = "OpenSSL bindings"
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["cryptography", "api-bindings"]

# these are deprecated and don't do anything anymore
[features]
v101 = []
v102 = []
v110 = []
v111 = []

vendored = ['openssl-sys/vendored']

[dependencies]
bitflags = "1.0"
cfg-if = "1.0"
foreign-types = "0.3.1"
libc = "0.2"
once_cell = "1.5.2"

openssl-sys = { version = "0.9.60", path = "../openssl-sys" }

[dev-dependencies]
tempdir = "0.3"
hex = "0.3"
