[package]
name = "openssl"
version = "0.10.73"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "Apache-2.0"
description = "OpenSSL bindings"
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["cryptography", "api-bindings"]
edition = "2021"
rust-version = "1.70.0"

# these are deprecated and don't do anything anymore
[features]
v101 = []
v102 = []
v110 = []
v111 = []

vendored = ['ffi/vendored']
bindgen = ['ffi/bindgen']
unstable_boringssl = ["ffi/unstable_boringssl"]
aws-lc = ["ffi/aws-lc"]
aws-lc-fips = ["ffi/aws-lc-fips"]
default = []

[dependencies]
bitflags.workspace = true
cfg-if.workspace = true
foreign-types.workspace = true
libc.workspace = true
once_cell.workspace = true

openssl-macros.workspace = true
ffi.workspace = true # 0.9.109 => -

[dev-dependencies]
hex.workspace = true
