[package]
name = "systest"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2021"

[dependencies]
libc.workspace = true
openssl-sys.workspace = true

[build-dependencies]
ctest.workspace = true

[features]
vendored = ['openssl-sys/vendored']
bindgen = ['openssl-sys/bindgen']
