[package]
name = "systest"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
openssl-sys = { path = "../openssl-sys" }

[build-dependencies]
ctest = "0.5.0-beta.0"

[features]
vendored = ['openssl-sys/vendored']
bindgen = ['openssl-sys/bindgen']
