[package]
name = "tongsuo-openssl"
version = "0.10.43"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "Apache-2.0"
description = "Tongsuo bindings"
repository = "https://github.com/iamwwc/rust-openssl"
readme = "README.md"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["cryptography", "api-bindings"]
edition = "2018"

# these are deprecated and don't do anything anymore
[features]
v101 = []
v102 = []
v110 = []
v111 = []
tokio = ["dep:futures-util", "dep:tokio"]
vendored = ['ffi/vendored']
bindgen = ['ffi/bindgen']
tongsuo = ["bindgen"]
unstable_boringssl = ["ffi/unstable_boringssl"]
default = ["tongsuo","tokio"]
[dependencies]
bitflags = "1.0"
cfg-if = "1.0"
foreign-types = "0.3.1"
libc = "0.2"
once_cell = "1.5.2"
anyhow = "1.0.66"

openssl-macros = { version = "0.1.0", path = "../openssl-macros" }
ffi = { package = "tongsuo-openssl-sys", version = "0.9.78", path = "../tongsuo-openssl-sys" }

futures-util = { version = "0.3", default-features = false, optional = true }
tokio = { version = "1.0", optional = true}

[dev-dependencies]
hex = "0.3"
tokio = { version = "1.0", features = ["full"] }